# ajro

./: CMakeLists.txt  Dockerfile  LICENSE  hello_test.cc
src/: Compiler.cpp  Compiler.h  EntryStruct.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Refiner.cpp  Refiner.h  TokenEnum.h  TokenStruct.h  loader.h  main.cpp
src/Lexer/: Lexer.cpp  Lexer.h
src/enum/: TokenEnum.h
src/struct/: EntryStruct.h  TokenStruct.h
tests/: hello_test.cc
tests/caseGeneratorLegacy/: expectedOutput.txt  inputData.txt  output.txt  recipe.txt
